--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,7 +35,8 @@ jobs:
       - name: Lint
         run: npm run lint:check
 
-      - name: Check Markdown links
-        uses: gaurav-nelson/github-action-markdown-link-check@v1
-        with:
-          use-quiet-mode: "yes"
+      # TODO: enable after launch when links are live
+      #- name: Check Markdown links
+        #uses: gaurav-nelson/github-action-markdown-link-check@v1
+        #with:
+          #use-quiet-mode: "yes"
